--- a/backend/src/main/resources/application-test.properties
+++ b/backend/src/main/resources/application-test.properties
@@ -11,5 +11,5 @@ jwt.expiration=60000000
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=sergiocardosodeveloper@gmail.com
-spring.mail.password=jyqvjpmncdpqppdb
+spring.mail.username=
+spring.mail.password=
