--- a/backend/src/main/resources/application-test.properties
+++ b/backend/src/main/resources/application-test.properties
@@ -11,5 +11,11 @@ jwt.expiration=60000000
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=sergiocardosodeveloper@gmail.com
-spring.mail.password=jyqvjpmncdpqppdb
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=trueserver.port=8080
+spring.mail.properties.mail.smtp.socketFactory.port = 465
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback = falsespring.mail.properties.mail.smtp.socketFactory.port = 465
+spring.mail.properties.mail.smtp.ssl.enable = true
